# censel_sport

./: .gitignore  LICENSE  Readme.md  analysis.py  db_stats.py  faker.py  inner_loop.py  loop_inner.py  loop_outer.py  main.py  make_report.sh  outer_loop.py  pyproject.toml  report.py  report_annex.py  report_annexes.sh  report_cutoffs.py  report_db.py  report_db_norms.py  report_db_norms_check.py  report_db_recap.py  report_db_stats.py  report_maker.sh  report_merger.py  report_toc.py  requirements.txt  toc.py
__marimo__/session/: bandi.py.json  bandi_2021_hd.py.json
bandi/: 2021_hd_tables.csv  2021_mlli_tables.csv  2021_mlli_tavole.csv  2022_hd_tables.csv  2022_hd_tavole.csv  2022_mlli_tables.csv  2022_mlli_tavole.csv  2023_hd_tables.csv  2023_mlli_tables.csv  2023_mlli_tavole.csv  2024_hd_tables.csv  2025_hd_tables.csv  2025_hd_tavole.csv  2025_mlli_tables.csv  2025_mlli_tavole.csv
config/: 1000mt_run_females.json  1000mt_run_males.json  100mt_run_females.json  100mt_run_males.json  25mt_swim_females.json  25mt_swim_males.json  push_ups_females.json  push_ups_males.json  sit_ups_females.json  sit_ups_males.json
data_in/: 1000mt_run_females.json  1000mt_run_males.json  100mt_run.json  100mt_run_females.json  100mt_run_males.json  25mt_swim_females.json  25mt_swim_males.json  push_ups_females.json  push_ups_males.json  sit_ups_females.json  sit_ups_males.json  situps.json  situps_males.json
data_out/100mt_run/: 100mt_run_analysis.json  analysis.json  bootstrap_estimates.json
data_out/100mt_run_males/: 100mt_run_males_analysis.html
data_out/sit_ups/: sit_ups_analysis.json
db/: db.csv  db_stats.json  synthetic_data.csv
ipynb/: plots.ipynb
lib/: __init__.py  bootstrap.py  data_bootstrap.py  data_clean.py  data_cleaner.py  data_fit.py  data_load.py  data_loader.py  data_mingler.py  data_montecarlo.py  data_plot.py  data_save.py  data_saver.py  data_standardize.py  data_standardizer.py  data_writer.py  distribution_fitter.py  distributions.py  montecarlo.py  percentiles_bootstrap.py  percentiles_cutoffs.py  percentiles_table.py  plots.py  utils.py  utils_generic.py  utils_plots.py  utils_stats.py
lib_analysis/: __init__.py  data_bootstrap.py  data_clean.py  data_fit.py  data_load.py  data_montecarlo.py  data_plot.py  data_save.py  data_standardize.py  data_test_cutoffs.py  logger.py  utils_distributions.py  utils_distributions_continuous.py  utils_distributions_discrete.py  utils_generic.py  utils_plots.py  utils_stats.py
lib_parser/: parser.py  utils_parser.py
lib_report/: _base.html  db_norms.html  db_stats.html  jinja_environment.py  report.html  report_annex.html  report_db_norms.html  report_db_recap.html  report_db_stats.html  report_toc.html  test_norms.html  utils_jinja.py  utils_report.py
lib_tests/: cutoffs_test.py  db_test.py
marimo/: bandi_hd.py  bandi_mlli.py  check_norms.py  db.py  tables.py
marimo/__marimo__/session/: bandi_2021_hd.py.json  bandi_hd.py.json  bandi_mlli.py.json  check_norms.py.json  db.py.json  tables.py.json
report/: _base.html  _base_report.html  report.html
warehouse/: distribution_fitter.py  model_selector.py  normative_table_validator.py  percentile_calculator.py  pipeline_time.py  temp.py
